--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,9 @@ yarn-debug.log*
 yarn-error.log*
 
 # Editor directories and files
+.vscode/*
+!.vscode/extensions.json
 .idea
-.vscode
 *.suo
 *.ntvs*
 *.njsproj
