--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1",
+    "qrcode.react": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
