--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "zod": "^3.22.4",
     "jspdf": "^2.5.1",
     "html2canvas": "^1.4.1",
-    "qrcode.react": "^3.1.0"
+    "qrcode.react": "^3.1.0",
+    "@azure/msal-browser": "^3.10.0",
+    "@azure/msal-react": "^2.0.12",
+    "@azure/cognitiveservices-computervision": "^8.2.0",
+    "@azure/ai-text-analytics": "^6.0.0",
+    "ethers": "^6.11.1",
+    "web3": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
