--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
@@ -9,5 +10,39 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        },
+        {
+          "key": "Permissions-Policy",
+          "value": "camera=(), microphone=(), geolocation=()"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.vercel-analytics.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*.cognitiveservices.azure.com; connect-src 'self' https://*.cognitiveservices.azure.com https://*.b2clogin.com https://*.onmicrosoft.com wss://*.ethereum.org https://*.ethereum.org; frame-ancestors 'none';"
+        }
+      ]
+    }
+  ],
+  "env": {
+    "VITE_APP_ENV": "production"
+  }
 } 
