chore: prepare for Vercel deployment

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+# Auth0 Configuration
+VITE_AUTH0_DOMAIN=dev-2ig0sirk5ee6g0bh.us.auth0.com
+VITE_AUTH0_CLIENT_ID=w3bHkwOe8YEFwRVsuG5Gf1gsI42hDJHJ
+VITE_AUTH0_CLIENT_SECRET=Y_G66Fv4wXfO39vBfvJjz3bsiUJcoyQYTN5BU1_aYaihEjQsHtIQqWil6L1-a2cT
+VITE_AUTH0_CALLBACK_URL=http://localhost:5173/callback
+VITE_AUTH0_AUDIENCE=https://dev-2ig0sirk5ee6g0bh.us.auth0.com/api/v2/
+VITE_AUTH0_SCOPE=openid profile email
+
 # Azure AD B2C Configuration
 VITE_AZURE_CLIENT_ID=your-client-id
 VITE_AZURE_TENANT_NAME=your-tenant-name
