--- a/package.json
+++ b/package.json
@@ -20,12 +20,9 @@
     "jspdf": "^2.5.1",
     "html2canvas": "^1.4.1",
     "qrcode.react": "^3.1.0",
-    "@azure/msal-browser": "^3.10.0",
-    "@azure/msal-react": "^2.0.12",
-    "@azure/cognitiveservices-computervision": "^8.2.0",
-    "@azure/ai-text-analytics": "^6.0.0",
     "ethers": "^6.11.1",
-    "web3": "^4.5.0"
+    "web3": "^4.5.0",
+    "@auth0/auth0-spa-js": "^2.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
