--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
+    "ethers": "^6.11.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.344.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
-    "zod": "^3.22.4",
-    "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1",
-    "qrcode.react": "^3.1.0",
-    "ethers": "^6.11.1",
     "web3": "^4.5.0",
-    "@auth0/auth0-spa-js": "^2.1.3"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
