--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
+    "axios": "^1.9.0",
     "ethers": "^6.11.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
